--- a/_posts/2016-02-13-10-17-26.md
+++ b/_posts/2016-02-13-10-17-26.md
@@ -1,7 +1,7 @@
 ---
 Layout: post
 Date: February 13, 2016 10:06:48
-Title: 
+Title: title
 ---
 I’m on a mission to listen through my entire iTunes music collection. The goal is to mark as Loved every track I truly rate. Back when iTunes was the singular music collection application, I had all of my music rated and wonderful playlists built which were built off smart filters. A playlist of songs with 3 stars and above. A playlist of songs with 4 stars and above. A playlist of songs rated 5 stars. A playlist of songs rated 4 stars and above I haven’t listened to in over a year. If there’s one thing iTunes gets right, it’s smart playlists. They were perfect.
 
