--- a/_posts/2016-02-12-16-56-58.md
+++ b/_posts/2016-02-12-16-56-58.md
@@ -1,7 +1,7 @@
 ---
 Layout: post
+Title: title before date
 Date: February 12, 2016 16:51:02
-Title: 
 ---
 Last September, I sustained a running injury towards the end of half-marathon training. It was a pull in my IT band, an injury which would eventually work itself out on its own after a few weeks of rest. I had gone to the doctor to diagnose it, and the bill has come to $500+. That's a $500+ bill for an injury which healed itself. And I have health insurance. 
 
