--- a/_posts/2016-02-12-12-38-46.md
+++ b/_posts/2016-02-12-12-38-46.md
@@ -1,7 +1,7 @@
 ---
-Layout: post
-Date: February 12, 2016 12:33:11
-Title: 
+layout: post
+date: February 12, 2016 12:33:11
+title: 
 ---
 Royally fucked up with Portigal.com development this morning. I added all his new posts to staging, which triggers an avalanche of emails and tweets. It effectively soft-launched the site and made public the staging version. I'm incredibly embarrassed. It's been an hour and my chest still feels heavy and hollow. 
 
