--- a/_posts/2016-07-29-20-32-48.md
+++ b/_posts/2016-07-29-20-32-48.md
@@ -4,3 +4,5 @@ date: July 29, 2016 20:30:04
 title: 
 ---
 I’ve finished designing the basic note-taking/journaling app I want to build. Next, I need to get a beta-level design finished for the RSS reader. I have the basic structure figured out. The only thing left is design it. 
+
+But first, maybe, is designing this blog. 
