--- a/_posts/2016-09-25-11-22-31.markdown
+++ b/_posts/2016-09-25-11-22-31.markdown
@@ -1,10 +1,7 @@
 ---
 title: 11 22 31
 date: 2016-09-25 11:11:12 Z
-tags:
-- notes,
-- jekyll,
-- cms
+tags: notes, jekyll, cms
 layout: post
 ---
 
