--- a/_posts/2016-09-25-18-35-07.md
+++ b/_posts/2016-09-25-18-35-07.md
@@ -4,6 +4,6 @@ date: 2016-09-25 18:33:37
 title: 
 tags: apple, airpods, headphones
 ---
-I was curios about the fit of the new Apple AirBud headphones so I cut off the chords from one of my many extra pairs. Ridiculous, I know. What's weird is that it proved to be a successful experiment. The chordless buds fit my ears *much better when the chords were removed. It still wasn't a snug fit, and I could shake them out of my ears when I deliberately tried, but they did stay put during any normal head motion. I didn't expect that to be true. There is some truth to the theory that the weight of the chords have a negative effect on the fit of the earbuds. Without the chords, they fit better. 
+I was curious about the fit of the new Apple AirBud headphones so I cut off the chords from one of my many extra pairs. Ridiculous, I know. What's weird is that it proved to be a successful experiment. The chordless buds fit my ears *much better when the chords were removed. It still wasn't a snug fit, and I could shake them out of my ears when I deliberately tried, but they did stay put during any normal head motion. I didn't expect that to be true. There is some truth to the theory that the weight of the chords have a negative effect on the fit of the earbuds. Without the chords, they fit better. 
 
 I don't recommend trying this yourself. Unless you, too, are extra curious. And you, too, have a half-dozen EarPods lying around.
