testing out photo blog options

--- a/_posts/2016-09-26-09-41-31.md
+++ b/_posts/2016-09-26-09-41-31.md
@@ -8,7 +8,6 @@ tags:
 - freelancing
 layout: post
 ---
+About a month ago, [Cushion](http://cushionapp.com) (an amazing app for freelancers), published [a short interview with me](http://cushionapp.com/talking-shop/brian-feeney/) on their site. I'm incredibly honored. 
 
-I'm a big user and fan of [Cushion](http://cushionapp.com), a web app which makes being a freelancer much much easier. It was created by Jonnie Hallman, a good dude, only a couple years ago and is currently doing really well. Which is great. I do credit Cushion with helping me become a freelancer.
-
-A month ago, they published [a short interview with me](http://cushionapp.com/talking-shop/brian-feeney/) on their site. I'm incredibly honored. 
+If you are a freelancer of any kind, I highly suggest checking out the app to see if it would work for you. Chances are good it will.
