adding titles to old posts

--- a/_posts/2015-03-20-20-40-06.md
+++ b/_posts/2015-03-20-20-40-06.md
@@ -8,6 +8,8 @@ tags:
 layout: post
 ---
 
+# Music and Middle Age
+
 I’ve had the same favorite band since I was 16. That’s not going to change. Now that I’m 34, that music is so packed with nostalgia and invested emotions it will forever be immensely important to me.
 I never stopped digging for new music. My deep love for one band led me to a broad love for all. In the late 90’s, I spent hours every week inside record shops. In the early 2000’s, I lived inside whichever P2P network was popping at the time. Now it’s all streaming services; first Spotify, then Rdio, now the new Apple Music app.
 
