--- a/_posts/2015-03-20-20-40-06.md
+++ b/_posts/2015-03-20-20-40-06.md
@@ -21,4 +21,4 @@ I used to obsess over my music collection. First with CDs, then with the MP3s in
 
 The best feature of the new Apple Music service is the curated playlists. They’ve hired actual people to make these, and the quality shows. Trusting in these playlists requires another act of letting go. My 22 year old self would never have accepted anyone else’s authority. I knew better. And any joker could see that the algorithms used for Artist Station radio on streaming services are laughably terrible. But these Apple Music curated playlists are nice. Admitting that has proven to me that I’ve grown up.
 
-There’s even [an Apple Music playlist](https://itunes.apple.com/us/playlist/blur-influences/idpl.f379f59e74664e918058403b8f2132a1) that curates a collection of music that inspired my favorite band. I listened to it and I enjoyed it. They got it right. I could have grumbled about the song selection, even though the chosen artists are perfect. It’s fine. It doesn’t matter. I’ve made hundreds of playlists just like it. Others have made hundreds of thousands of playlists just like it. All that is well and good. Music is a conversation. For now whatever technology has the music in it, I can just press play, and there it is in the air, the music. 
+There’s even [an Apple Music playlist](https://itunes.apple.com/us/playlist/blur-influences/idpl.f379f59e74664e918058403b8f2132a1) that curates a collection of music that inspired my favorite band. I listened to it and I enjoyed it. They got it right. I could have grumbled about the song selection, even though the chosen artists are perfect. It’s fine. It doesn’t matter. I’ve made hundreds of playlists just like it. Others have made hundreds of thousands of playlists just like it. All that is well and good. Music is a conversation. For now whatever technology has the music in it, I can just press play, and there it is in the air, the music.
