--- a/_posts/2016-01-04-23-08-46.md
+++ b/_posts/2016-01-04-23-08-46.md
@@ -2,6 +2,7 @@
 title: 23 08 46
 date: 2016-01-04 00:00:00 Z
 layout: post
+tags: Instapaper
 ---
 
 New plan for getting through my Instapaper queue: read the shortest article every day, and read the longest article every week. There are 104 articles in there now. I'm wondering how long this will take to get through. More than 14 weeks, probably, as I'll also be adding new things to it. 
