--- a/_posts/2016-01-13-21-07-26.md
+++ b/_posts/2016-01-13-21-07-26.md
@@ -2,6 +2,7 @@
 title: Bowie's Reading List
 date: 2016-01-13 21:06:24 Z
 layout: post
+tags: David Bowie, books
 ---
 
 [David Bowie's reading list](https://www.brainpickings.org/2013/10/03/david-bowie-reading-list/?utm_content=buffer8ade6&utm_medium=social&utm_source=twitter.com&utm_campaign=buffer), from Brain Pickings. A lot of good stuff here, only a few of which I've read. 
