--- a/_posts/2016-02-06-09-39-09.md
+++ b/_posts/2016-02-06-09-39-09.md
@@ -2,6 +2,7 @@
 title: 09 39 09
 date: 2016-02-06 09:30:02 Z
 layout: post
+tags: Twitter
 ---
 
 The more I think about it, the more ready I become for the end of Twitter. If it went away, I, personally, would not be so terribly inconvenienced. I would lose a few things, but I’d gain others, too. I’d gain back time. I would put greater emphasis on articles and books in my life. I might even write more. There are conceivable benefits of a world without Twitter.
