--- a/_posts/2016-08-12-14-44-59.md
+++ b/_posts/2016-08-12-14-44-59.md
@@ -2,10 +2,10 @@
 title: 14 44 59
 date: 2016-08-12 14:41:04 Z
 layout: post
+tags: blogging, writing
 ---
 
-Tom Critchlow has written down [seven ways to get back into blogging](http://tomcritchlow.com/2016/08/09/blogging-not-blogging/).
-This is my favorite piece of advice from him:
+Tom Critchlow has written down [seven ways to get back into blogging](http://tomcritchlow.com/2016/08/09/blogging-not-blogging/). This is my favorite piece of advice from him:
 
 > Networked writing - aka blogging - is all about content as an idea vector. A conversation starter from me to you - if I write this and email it to you that will spark something. If you email it and send it to 5 people you’re sparking the same idea in 5 different ways. So forget writing for the words, write for the space between the word, between the ideas - write as connective tissue between people.
 
