--- a/_posts/2016-01-13-21-29-26.md
+++ b/_posts/2016-01-13-21-29-26.md
@@ -2,6 +2,7 @@
 title: 21 29 26
 date: 2016-01-13 21:28:18 Z
 layout: post
+tags: books
 ---
 
 I put a hold on a book at the public library. Maybe this is what I need to start reading more. Free books. 
