--- a/_posts/2016-08-23-16-18-27.md
+++ b/_posts/2016-08-23-16-18-27.md
@@ -2,6 +2,7 @@
 title: 16 18 27
 date: 2016-08-23 16:18:23 Z
 layout: post
+tags: blogging
 ---
 
 [Another article](https://thehairpin.com/blog-you-idiots-86995e96d5d5#.e90m3dp01) begging for people to blog again. 
