--- a/_posts/2016-09-29-06-56-49.md
+++ b/_posts/2016-09-29-06-56-49.md
@@ -2,7 +2,7 @@
 title: 06 56 49
 date: 2016-09-29 00:00:00 Z
 layout: 
-post date: September 29, 2016 at 06:56PM
+tags: Donald Trump
 ---
 
 It's now an old theory that Trump never intended to win the presidential election. It's a strange but oddly believable idea. Whenever I consider it, I can actively feel strong cognitive dissonance. Trump surely covets the prestige and power that comes with the presidency. But he also repeatedly gives the impression he has no interest in doing the actual work that comes with the office.
