--- a/_posts/2016-09-29-06-49-27.md
+++ b/_posts/2016-09-29-06-49-27.md
@@ -1,8 +1,8 @@
 ---
 title: 06 49 27
 date: 2016-09-29 00:00:00 Z
-layout: 
-post date: September 29, 2016 at 06:49PM
+layout: post 
+date: September 29, 2016 at 06:49PM
 ---
 
 [The Obvious, the Easy, and the Possible](https://m.signalvnoise.com/the-obvious-the-easy-and-the-possible-a09387ad3652), a pretty great, short post by Jason Fried. If you've ever tried to design a software product, you will recognize the trade-offs he describes.
