--- a/_posts/2016-09-30-08-51-33.md
+++ b/_posts/2016-09-30-08-51-33.md
@@ -16,4 +16,4 @@ layout: post
 
 We news junkies have spent *a lot* of time on Five Thirty Eight in 2016. I know these polls are next to meaningless, but its *very* calming to stare at a chart like the one above. In an election cycle like the one we're going through, it's much needed medicine, even if it's a placebo.
 
-Trump-Induced anxiety [is real](http://www.slate.com/articles/double_x/doublex/2016/09/trump_induced_anxiety_is_a_real_thing.html).
+Trump-induced anxiety [is real](http://www.slate.com/articles/double_x/doublex/2016/09/trump_induced_anxiety_is_a_real_thing.html).
