--- a/_posts/2016-09-21-11-30-59.md
+++ b/_posts/2016-09-21-11-30-59.md
@@ -1,6 +1,8 @@
 ---
-title: 11 30 59
+title:
 date: 2016-09-21 15:30:00 Z
+layout: post
+tags: Site Leaf
 ---
 
 Testing out [Siteleaf](https://www.siteleaf.com/) for running this blog. I'm happy to continue using my text editor and Github for committing, but this looks nice. 
