--- a/_posts/2016-09-25-18-35-07.md
+++ b/_posts/2016-09-25-18-35-07.md
@@ -8,6 +8,6 @@ tags:
 layout: post
 ---
 
-I was curious about the fit of the new Apple AirBud headphones so I cut off the chords from one of my many extra pairs. Ridiculous, I know. What's weird is that it proved to be a successful experiment. The chordless buds fit my ears *much better when the chords were removed. It still wasn't a snug fit, and I could shake them out of my ears when I deliberately tried, but they did stay put during any normal head motion. I didn't expect that to be true. There is some truth to the theory that the weight of the chords have a negative effect on the fit of the earbuds. Without the chords, they fit better. 
+I was curious about the fit of the new Apple AirBud headphones so I cut off the chords from one of my many extra pairs. Ridiculous, I know. What's weird is that it proved to be a successful experiment. The chordless buds fit my ears *much* better when the chords were removed. It wasn't a perfectly snug fit, and I was able to shake them out of my ears when I deliberately tried, but they did stay put during any normal head motion. There is some truth to the theory that the weight of the chords have a negative effect on the fit of the earbuds. Without the chords, they fit better. Before trying this dumb experiment, I had little hope the new AirBuds would work for me. Now I do.
 
-I don't recommend trying this yourself. Unless you, too, are extra curious. And you, too, have a half-dozen EarPods lying around.
+I don't recommend trying this yourself. It was dumb.
