--- a/_posts/2016-08-01-10-48-28.md
+++ b/_posts/2016-08-01-10-48-28.md
@@ -10,4 +10,4 @@ layout: post
 
 > "Millennials want walkability and convenience," says Ducker. "They have a higher transit use propensity than those in the past, and they want to be within walking distance of shopping and dining. The problem with the existing suburban housing stock in America is that it just doesn’t provide that."
 
-There are plenty of places to live, but developers need to start building homes and neighborhoods which match our minimum requirements. I really can't my peers moving into those neighborhoods built during the last 30 years; the over-sized homes, lacking in style, disconnected from any town center.
+There are plenty of places in the US to live, but developers need to start building homes and neighborhoods which match our minimum requirements. I really can't see my peers moving into most neighborhoods built during the last 30 years. The over-sized houses, absolute lack of style, and intentional disconnect from any town center are all major deficiencies. I intend to own a home one day, but it seems the number of existing homes I'd consider acceptable is very very small.
