--- a/_posts/2016-09-29-06-56-49.md
+++ b/_posts/2016-09-29-06-56-49.md
@@ -7,7 +7,7 @@ tags:
 layout: 
 ---
 
-It's now an old theory that Trump never intended to win the presidential election. It's a strange but oddly believable idea. Whenever I consider it, I can actively feel strong cognitive dissonance. Trump surely covets the prestige and power that comes with the presidency. But he also repeatedly gives the impression he has no interest in doing the actual work that comes with the office.
+It's now an old theory that Trump never intended to win the presidential election. It's a strange but oddly believable idea. Whenever I consider it, I can actively feel strong cognitive dissonance happening in my brain. Trump surely covets the prestige and power that comes with the presidency. But he also repeatedly gives the impression he has no interest in doing the actual work that comes with the office.
 
 In any case, Dave Pell makes a good argument [Trump really is trying to lose](https://medium.com/@davepell/hes-trying-to-lose-9f0c174fb9aa). My hunch is that even The Great Cheeto himself isn't sure.
  
