--- a/_posts/2016-02-13-10-17-26.md
+++ b/_posts/2016-02-13-10-17-26.md
@@ -11,3 +11,5 @@ I’m on a mission to listen through my entire iTunes music collection. The goal
 A some point, I lost all of that rating metadata. I’m not sure when, but it’s probably either from porting my playlist from one computer to another, or perhaps when iTunes Match was introduced. I mourned the loss, but moved to Spotify and started over. Then I jumped to Rdio. Now I’m back with iTunes Music and the option for Smart Playlists are back again. I’m stoked.
 
 So I’m going through my entire music collection again. I made a smart playlist which includes a bunch of filters: tracks I haven’t yet “loved”, tracks I haven’t “skipped”, and tracks with less than 2 plays. It’s currently at 15,620 songs long. Yesterday morning, 15,727. I’m making progress. At this rate it’ll take me a whole year. Maybe faster, maybe slower. So much music. 
+
+**Update 10/5/2016** The number of tracks in this playlist is now at 16,265. It's gone *up*. I keep finding new records to add to my library, or records which I once owned but somehow disappeared from iTunes. This is going to take a lot longer than a year.
