--- a/_posts/2016-10-10-11-26-43.md
+++ b/_posts/2016-10-10-11-26-43.md
@@ -4,8 +4,8 @@ date: 2016-10-10 00:00:00 Z
 tags:
 - USA,
 - happiness
-layout: 
-post date: October 10, 2016 at 11:26AM
+layout: post 
+date: October 10, 2016 at 11:26AM
 ---
 
 Ruth Whippman writing about [the American obsession with happiness](http://www.vox.com/first-person/2016/10/4/13093380/happiness-america-ruth-whippman):
