--- a/_posts/2016-11-11-11-38-27.md
+++ b/_posts/2016-11-11-11-38-27.md
@@ -9,4 +9,4 @@ tags:
 layout: post
 ---
 
-Making another step towards being a better citizen: I followed the RSS feeds of the Brooklyn Democratic party and a couple local Brooklyn newspapers. I’m determined to be better informed about my community and my representatives. 
+Making another step towards being a better citizen: I followed the RSS feeds of the Brooklyn Democratic party and a couple local Brooklyn newspapers. I’m determined to be better informed about my community and my representatives, and to be better prepared for involvement with community organizing and volunteer efforts. 
