--- a/_posts/2016-11-11-10-15-23.md
+++ b/_posts/2016-11-11-10-15-23.md
@@ -8,4 +8,4 @@ layout: post
 
 A quote which pairs well with my previous post. 
 
-(From [this post by Tobi Atkins](http://www.pickthebrain.com/blog/one-phrase-changed-life/)), via [Swiss-Miss](http://www.swiss-miss.com/).)
+(From [this post by Tobi Atkins](http://www.pickthebrain.com/blog/one-phrase-changed-life/), via [Swiss-Miss](http://www.swiss-miss.com/).)
