--- a/_posts/2016-11-14-10-17-46.md
+++ b/_posts/2016-11-14-10-17-46.md
@@ -7,6 +7,6 @@ tags:
 layout: post
 ---
 
-The nature of Twitter has undergone a massive change since the election. The content balance of my feed has been completely overtaken by politics. This feels right for the moment we are living in. It's of great importance that we keep our eyes on Trump and his transition into power. I'm not yet ready for jokes about any of this. I'm not yet ready to turn my full attention to my work, nor to turn my back to what's happening in Washington. 
+The nature of Twitter has undergone a massive change since the election. The content balance of my feed has been completely overtaken by politics. This feels right for the moment we are living in. It's of great importance that we keep our eyes on Trump and his transition into power. I'm not yet ready for jokes about any of this. I'm not yet ready to turn my full attention to my work, nor to turn my back on what's happening in Washington. 
 
 Twitter was once a place of refuge. A place where I could go for news *and* jokes *and* industry stuff *and* friends' personal lives. It's now all politics all the time. Where I once had habits of hour-long binging on my feed, I now can stomach only a few minutes. Does this change reflect Twitter? Me? The entire country? America is different this week. You can see it and feel it. 
