--- a/_posts/2016-11-14-19-17-03.md
+++ b/_posts/2016-11-14-19-17-03.md
@@ -9,3 +9,5 @@ The Atlantic [reports](http://www.theatlantic.com/business/archive/2016/11/donal
 It's time we start having donation parties among us who can afford to give. Most of us, including me, can afford to give. For years, [the donor class](https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=the%20donor%20class) has been something to snipe at. Now seems like the perfect time to egalitize that culture. We should all become donors, at least as much as our personal finances allow. Let's throw donation parties. Let's host members of successful organiztions to educate us on what is possible.
 
 I donated to the ACLU a few days ago. I'm going to continue to donate where and when I can. I'm ashamed to have donated so little in the past.
+
+**Update:** The ACLU has explained [What they plan to do with their new financial support](https://www.aclu.org/blog/speak-freely/aclu-receiving-outpouring-support-heres-what-we-plan-doing-it).
