--- a/_posts/2016/2016-12-30-10-01-40.md
+++ b/_posts/2016/2016-12-30-10-01-40.md
@@ -9,4 +9,4 @@ Social media habits are thrown out of whack when the biggest news of the day is 
 
 On the other hand, *what if everything is still normal?* Smart people have been saying this country is no different today than it was two months ago. The balance of power has shifted, but we’re still the same group of 320 million people. And I don’t work in government, so what in my life has changed? The poetic answer is the future has changed. But the practical answer is: not much.
 
-I need to continue to write about my interests. I need to be sure I stay true to myself. I also need to write about politics if I have something personal to share. Blogging really is a new way of being public. Many many people have already worked that out. I’m going to continue trying to post everyday, regardless of the news. 
+I need to continue to write about my interests. I need to be sure I stay true to myself. I also need to write about politics if I have something personal to share. Blogging really is a new way of being public. Many many people have already worked that out. I’m going to continue trying to post everyday, regardless of the news. n
