--- a/_posts/2017/2017-01-05-10-57-08.md
+++ b/_posts/2017/2017-01-05-10-57-08.md
@@ -13,4 +13,4 @@ and
 
 > We need a union of news orgs, implemented as an web site, with a business model that merges all the different for-pay methods. It should be easy to use like Facebook, but without the conflicts of Facebook and open to bloggers and new voices who aren't controlled by corporate media.
 
-Both of these ideas are incorporated within my concept for [Feeeds.me][http://feeeds.me]. What he's describing is a smarter RSS Reader. One that more smartly connects readers with writers and publications. 
+Both of these ideas are incorporated within my concept for [Feeeds.me](http://feeeds.me). What he's describing is a smarter RSS Reader. One that more smartly connects readers with writers and publications. 
