--- a/_posts/2017/2017-01-05-10-44-35.md
+++ b/_posts/2017/2017-01-05-10-44-35.md
@@ -5,4 +5,4 @@ title:
 tags:
 ---
 
-Medium [is pivoting](https://blog.medium.com/renewing-mediums-focus-98f374a960be#.8tzn7ocw2). They are reducing their workforce by 1/3rd in order to create "a new model for writers and creators to be rewarded, based on the value they’re creating for people." Medium is positioned to be a prime mover in online publishing. What they do and how they do it is worthy of attention. I'm still not convinced what they offer is in the best interest of writers and the internet in general. People should be able to own their content and host it themselves. That content should not be locked into silos. It's possible Medium's new purpose will be in support of the open web, but I'm not betting on it.
+Medium [is pivoting](https://blog.medium.com/renewing-mediums-focus-98f374a960be#.8tzn7ocw2). They are reducing their workforce by 1/3rd in order to create "a new model for writers and creators to be rewarded, based on the value they’re creating for people." Medium is positioned to be a prime mover in online publishing, so what they do and how they do it is worthy of attention. I'm still not convinced what they offer is in the best interest of writers and the internet in general. I believe people should own their content and host it themselves, avoiding the silos. It's possible Medium's new purpose will be in support of the open web, but I'm not betting on it.
