--- a/_posts/2017/2017-01-02-09-28-35.md
+++ b/_posts/2017/2017-01-02-09-28-35.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-02 09:27:44
 title: 
-tags:
+tags: Ethan Marcotte, blogs
 ---
 
 I welcome [Ethan Marcotte](https://ethanmarcotte.com/wrote/hyper-text) back to blogging. It's so nice to read the heartfelt thoughts of respectable people who share on their own personal corners of the internet. That's the best of what blogging offers. It's what Twitter cannot.
