--- a/_posts/2017/2017-01-05-10-57-08.md
+++ b/_posts/2017/2017-01-05-10-57-08.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-05 10:51:21
 title: 
-tags:
+tags: Dave Winer, RSS
 ---
 
 I'm very much into Dave Winer's ideas for [reading news online](http://scripting.com/2017/01/05/weStillNeedANetflixForNews.html).
