--- a/_posts/2017/2017-01-06-09-43-35.md
+++ b/_posts/2017/2017-01-06-09-43-35.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-06 09:42:23
 title: 
-tags:
+tags: Twitter, blogs
 ---
 
 I’ve escaped Twitter. I fled. My only permanent connection now to people of the online world is RSS, is blogs. I highly recommend doing the same. Here’s my advice. Create a folder in your RSS reader and call it *People*. In this folder, add all the feeds from blogs by individual people, and only individual people. My folder includes 232 blogs, and I’d guess there are about 30 to 50 posts from it a day. It’s lovely reading through these posts. It’s a self-curated collection of personal voices I respect and admire. 
