--- a/_posts/2017/2017-01-09-09-56-53.md
+++ b/_posts/2017/2017-01-09-09-56-53.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-09 09:51:09
 title: 
-tags:
+tags: Meryl Streep, Donald Trump
 ---
 
 Meryl Streep's [speech last night at the Golden Globes](http://www.nytimes.com/2017/01/08/arts/television/meryl-streep-golden-globes-speech.html) was dignified and welcomed. We should take advantage of every opportunity to remind everyone of our president-elect's poor character. To remind ourselves that some of us still believe in honor and respect and won't give either direct or indirect approval of it's opposite.
