--- a/_posts/2017/2017-01-11-10-02-33.md
+++ b/_posts/2017/2017-01-11-10-02-33.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-11 10:02:28
 title: 
-tags:
+tags: Donald Trump, Vox
 ---
 
 From [a Vox explainer](http://www.vox.com/policy-and-politics/2017/1/11/14233898/cnn-bombshell-report-russia-blackmail-trump-explained-videotape-sex-money) on the seemingly credible allegation that Russia has compromising information on Trump:
