--- a/_posts/2017/2017-01-06-09-52-41.md
+++ b/_posts/2017/2017-01-06-09-52-41.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-06 09:51:59
 title: 
-tags:
+tags: blogging
 ---
 
 How to start blogging: mostly blog about blogs and blogging. I guess eventually it turns into something else?
