--- a/_posts/2017/2017-01-10-16-12-29.md
+++ b/_posts/2017/2017-01-10-16-12-29.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-10 16:11:37
 title: 
-tags:
+tags: marbles
 ---
 
 Million dollar idea: white noise generator app that's just audio recordings of [marble runs](https://www.youtube.com/watch?v=6pTpRop3aBE). You could probably even kickstart an entire meditation therapy industry with these. 
