--- a/_posts/2017/2017-01-13-09-40-49.md
+++ b/_posts/2017/2017-01-13-09-40-49.md
@@ -5,4 +5,4 @@ title:
 tags:
 ---
 
-I love next weeks cover for the New Yorker. [Nailed it.](http://www.newyorker.com/culture/culture-desk/cover-story-2017-01-23?mbid=rss)
+I love next week's cover for the New Yorker. [Nailed it.](http://www.newyorker.com/culture/culture-desk/cover-story-2017-01-23?mbid=rss)
