--- a/_posts/2017/2017-01-15-13-14-33.md
+++ b/_posts/2017/2017-01-15-13-14-33.md
@@ -15,4 +15,4 @@ True.
 
 This is me, too.
 
-I'm forcing myself to read physical books again. For most of my life, I would read 30 or more books a year. The last couple of years? Maybe 2. Social media and blogs/news has a stranglhold on my attention. I very much want to change the balance of my reading diet and consume fiction, again, and classic literature. I'm hoping this will be easier now that my addiction to Twitter has been quelled, and social media in general has lost its luster. 
+I'm forcing myself to read physical books again. For most of my life, I would read 30 or more books a year. The last couple of years? Maybe 2. Social media and blogs/news has a stranglehold on my attention. I very much want to change the balance of my reading diet and consume fiction, again, and classic literature. I'm hoping this will be easier now that my addiction to Twitter has been quelled, and social media in general has lost its luster. 
