--- a/_posts/2017/2017-01-13-09-50-10.md
+++ b/_posts/2017/2017-01-13-09-50-10.md
@@ -5,6 +5,6 @@ title:
 tags:
 ---
 
-I've taken down a post from yesterday, deciding the voice was not what I want for this blog. There is no need to be negative towards one of my peers. Truth to power, yes. But mean-spirited critiques of someone I don't know is not part of my character — or so I hope for myselfs.
+I've taken down a post from yesterday, deciding the voice was not what I want for this blog. There is no need to be negative towards one of my peers. Truth to power, yes. But mean-spirited critiques of someone I don't know is not part of my character — or so I hope for myself.
 
 I've been running this particular blog for almost six months now, and I'm still trying to figure out the tone I'm trying to set, the purpose this serves, and how this fits into my other online activities. It will require some more experimentation. Trying out different kinds of posting. I think eventually I'll get a handle on what this is for and why I'm doing it.
