--- a/_posts/2017/2017-02-10-08-55-38.md
+++ b/_posts/2017/2017-02-10-08-55-38.md
@@ -5,4 +5,4 @@ title:
 tags:
 ---
 
-Today is the 20th anniversary of the release of [*Blur*](https://en.wikipedia.org/wiki/Blur_(Blur_album)), Blur's fifth album. 1997. I'm not kidding when I say this record changed the trajection of my life. I remain steadfastly romantic about that. Gotta take time to appreciate the good things.
+Today is the 20th anniversary of the release of [*Blur*](https://en.wikipedia.org/wiki/Blur_(Blur_album)), Blur's fifth album. 1997. I'm not kidding when I say this record changed the trajectory of my life. It means a lot to me. It speaks to me deeply, in a way no other art had done before. Even today, when I listen to it I feel centered in myself, like it's some kind of emotional mirror soothing to peer into. I hope everyone has a record they can say the same thing about.
