updating post drafts

--- a/_drafts/2017-02-11-10-14-26.md
+++ b/_drafts/2017-02-11-10-14-26.md
@@ -5,4 +5,8 @@ title:
 tags:
 --- 
 
-[Simplifying Shelter: Why Falling Home Prices Could Be a Good Thing](https://www.nytimes.com/2017/02/10/upshot/popping-the-housing-bubbles-in-the-american-mind.html)
+Interesting [thought experiment](https://www.nytimes.com/2017/02/10/upshot/popping-the-housing-bubbles-in-the-american-mind.html):
+
+> So instead of looking at homes as investments, what if we regarded them like a TV or a car or any other consumer good? People might expect home prices to go down instead of up. Homebuilders would probably spend more time talking about technology and design than financing options. Politicians might start talking about their plans to lower home prices further, as they often do with fuel prices.
+
+Would never happen, but as someone who would like to own a home one day, I'd very much like to see home prices come back down to realistic levels.
