--- a/_posts/2017/2017-02-25-22-23-39.md
+++ b/_posts/2017/2017-02-25-22-23-39.md
@@ -5,8 +5,8 @@ title:
 tags:
 ---
 
-Plenty of good tech talk in 
-[wired article about the changes at the New York Times](https://www.wired.com/2017/02/new-york-times-digital-journalism/). Also some good general perspectives on the news.
+Plenty of good tech talk in this
+[Wired article about the changes at the New York Times](https://www.wired.com/2017/02/new-york-times-digital-journalism/). Also some good general perspectives on the news.
 
 > Four weeks after the election, Times chief executive Mark Thompson told an industry conference that subscriptions had surged at 10 times their usual rate. To Thompson, the likeliest explanation wasn’t that the Times did a bang-up job covering the final days of the election—like everyone else, they failed to anticipate Trump’s victory—or that readers were looking to hedge against fake news. He suggests a simpler reason: “I think the public anxiety to actually have professional, consistent, properly funded newsrooms holding politicians to account is probably bigger than all of the other factors put together.” In other words, the president’s hostility to the press and the very notion of facts themselves seems to have reminded people that nothing about The New York Times—or the kind of journalism it publishes—is inevitable.
 
