adding tags to posts

--- a/_posts/2017/2017-01-13-09-40-49.md
+++ b/_posts/2017/2017-01-13-09-40-49.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-13 09:39:57
 title: 
-tags:
+tags: New Yorker, Donald Trump
 ---
 
 I love next week's cover for the New Yorker. [Nailed it.](http://www.newyorker.com/culture/culture-desk/cover-story-2017-01-23?mbid=rss)
