--- a/_posts/2017/2017-01-15-13-03-23.md
+++ b/_posts/2017/2017-01-15-13-03-23.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-15 13:01:47
 title: 
-tags:
+tags: Donald Trump
 ---
 
 [The Music Donald Trump Can’t Hear](http://www.newyorker.com/news/daily-comment/the-music-donald-trump-cant-hear), from the New Yorker.
