--- a/_posts/2017/2017-01-15-13-14-33.md
+++ b/_posts/2017/2017-01-15-13-14-33.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-15 13:14:26
 title: 
-tags:
+tags: reading, books
 ---
 
 A couple great passages from a Wall Street Journal article, [The Need to Read](http://www.wsj.com/articles/the-need-to-read-1480083086).
