--- a/_posts/2017/2017-01-19-10-24-08.md
+++ b/_posts/2017/2017-01-19-10-24-08.md
@@ -2,7 +2,7 @@
 layout:
 post date: January 19, 2017 at 02:09AM
 title:
-tags:
+tags: science, politics
 ---
 
 [Yes, Science is Political](http://www.theverge.com/2017/1/19/14258474/trump-inauguration-science-politics-climate-change-vaccines) 
