--- a/_posts/2017/2017-01-22-11-30-40.md
+++ b/_posts/2017/2017-01-22-11-30-40.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-01-22 11:11:55
 title: 
-tags:
+tags: George Lakoff, politics
 ---
 
 George Lakoff has written a long update to his book *Moral Politics* in the form of a blog post: [A Minority President: Why the Polls Failed, And What the Majority Can Do](https://georgelakoff.com/2016/11/22/a-minority-president-why-the-polls-failed-and-what-the-majority-can-do/). If you haven't read *Moral Politics*, or it's been over a decade (as it was for me) since you last picked it up, I'd place this in your Must Read list. 
