--- a/_posts/2017/2017-02-24-08-22-15.md
+++ b/_posts/2017/2017-02-24-08-22-15.md
@@ -2,7 +2,7 @@
 layout: post
 date: February 22, 2017 at 01:13PM
 title:
-tags:
+tags: white nationalism, Bloomington IN
 --- 
 
 White nationalism is a problem everywhere in America, including [Bloomington, Indiana](https://qz.com/915448/the-american-midwests-anti-trump-resistance-exposes-the-myth-of-a-clear-blue-red-divide/), where I went to school. 
