--- a/_posts/2017/2017-02-24-09-11-41.md
+++ b/_posts/2017/2017-02-24-09-11-41.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-24 09:10:53
 title: 
-tags:
+tags: racism, white nationalism
 ---
 
 [This](http://www.slate.com/articles/news_and_politics/politics/2017/02/cpac_invented_an_alternate_history_of_the_alt_right.html) is the kind of racist who, in a better world, was never given a voice in a major publication: 
