--- a/_posts/2017/2017-02-26-10-58-28.md
+++ b/_posts/2017/2017-02-26-10-58-28.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-26 10:58:24
 title: 
-tags:
+tags: Barack Obama, history, art, culture
 ---
 
 [Here's a nice reflection](https://www.nytimes.com/2017/01/18/arts/president-obama-pop-culture.html) on Obama's presidency and his relation to art and culture. 
