--- a/_posts/2017/2017-02-26-11-06-10.md
+++ b/_posts/2017/2017-02-26-11-06-10.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-26 11:03:35
 title: 
-tags:
+tags: Google, apps
 ---
 
 Deleted the Google app from my iPad. It was the cause for the severe battery drain I had recently noticed. Though it was only onscreen for a few minutes in the last 24 hours (per the iOS settings report), it had been running nearly 2 hours in the background. I'm not okay nor comfortable with that.
