--- a/_posts/2017/2017-03-02-08-35-54.md
+++ b/_posts/2017/2017-03-02-08-35-54.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-03-02 08:58:16
 title: 
-tags:
+tags: solar eclipse, astronomy
 ---
 
 A major [solar eclipse](http://nasa.tumblr.com/post/157489038564) will be visible across the US this year on August 21st, on a line from Oregon to South Carolina. I've had this on my calendar for years, really hoping I'd be able to see it.
