--- a/_posts/2017/2017-02-25-22-23-17.md
+++ b/_posts/2017/2017-02-25-22-23-17.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-25 22:23:03
 title: 
-tags:
+tags: housing, real estate
 ---
 
 Interesting [thought experiment](https://www.nytimes.com/2017/02/10/upshot/popping-the-housing-bubbles-in-the-american-mind.html):
