--- a/_posts/2017/2017-02-25-22-23-39.md
+++ b/_posts/2017/2017-02-25-22-23-39.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-25 22:23:35
 title: 
-tags:
+tags: 2016 Election, New York Times
 ---
 
 Plenty of good tech talk in this
