--- a/_posts/2017/2017-02-26-16-17-00.md
+++ b/_posts/2017/2017-02-26-16-17-00.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2017-02-26 16:01:17
 title: 
-tags:
+tags: income inequality, taxes
 ---
 
 Thom Hartmann does a pretty good job at explaining why tax cuts make the rich richer, but [do very little for the middle and lower classes](http://www.alternet.org/right-wing/perennial-gop-tax-scam). The basic problem lies with who has control over their salary and who doesn't. When company executives get, say, a 25% tax cut, that's 25% more they pocket as income. But when employees recieve the same 25% tax cut, their salaries are eventually lowered so that their after-tax income is returned to the same living wage it was before the tax cut. It may take years for the old balance to be struck again, but it always happens.
