--- a/_posts/2017/2017-10-27-08-52-15.md
+++ b/_posts/2017/2017-10-27-08-52-15.md
@@ -11,7 +11,7 @@ So much to agree with in this article in the Atlantic, [Climate Policy Can Help 
 
 Yep.
 
-> Well, sure. But much of the conservative argument for pronatalist politics respects the fact that cultural changes—and important medical and political advances—have altered childbearing decisions. Isn’t the general anxiety about climate change as a cultural phenomenon—and the lack of political amelioration of it—one of those changes? Potential parents undertake a complex and often spiritual calculus when they plan their families, when they decide to have zero, or one, or five kids. It seems reasonable to me that if you want to coax people back into having larger families, or families at all, you may have to soften that calculus by assuring them the future will be a good place to live.  
+> [M]uch of the conservative argument for pronatalist politics respects the fact that cultural changes—and important medical and political advances—have altered childbearing decisions. Isn’t the general anxiety about climate change as a cultural phenomenon—and the lack of political amelioration of it—one of those changes? Potential parents undertake a complex and often spiritual calculus when they plan their families, when they decide to have zero, or one, or five kids. It seems reasonable to me that if you want to coax people back into having larger families, or families at all, you may have to soften that calculus by assuring them the future will be a good place to live.  
 Because right now, the future does not seem like a very pleasant place to live at all. Economists who study climate change say that, at best, the phenomenon will exact persistent and troubling costs on the poorest parts of the United States; at worst, it will initiate one of several globally destabilizing crises. Global warming will also degrade Earth in plenty of hard-to-calculate ways, wrecking the gentle rhythm of the seasons and strangling the natural biodiversity of every stream and mountain.
 
 Uh huh.
