--- a/_posts/2017/2017-11-27-08-50-13.md
+++ b/_posts/2017/2017-11-27-08-50-13.md
@@ -13,4 +13,4 @@ and
 
 > Young people have curled around their economic situation “like vines on a trellis,” as Harris puts it. And, when humans learn to think of themselves as assets competing in an unpredictable and punishing market, then millennials—in all their anxious, twitchy, phone-addicted glory—are exactly what you should expect.
 
-Most baby boomers look at any single millennial and come away with one of two opinions: 1) if they're doing well, then they're entitled for wanting more, or 2) if they're poor or downwardly mobile, they're lazy and wasting their potentional. After years of this, coming from all directions, it begins to feel a bit oppressive. That's what Tolentino is successfull at describing in this piece. The generation in power hoards all the wealth and grips tightly around their authority, while at the same time demanding that those of my generation live as they had lived. But the world they've created for us isn't the world their parents constructed for them where the suburban homes were plentiful and for the taking, and even low-level blue collar jobs paid enough to own them. In 2017, homes are wildy unnafordable, and jobs pay less than they did, on average, than they did 40 years ago. It's an untennable situation.
+Seems like baby boomers look at any single millennial and come away with one of two opinions: 1) if they're doing well, then they're entitled for wanting more, or 2) if they're poor or downwardly mobile, they're lazy and wasting their potentional. After years of this, coming from all directions, it begins to feel a bit oppressive. That's what Tolentino is successfull at describing in this piece. The generation in power hoards all the wealth and grips tightly around their authority, while at the same time demanding that those of my generation live as they had lived. But the world they've created for us isn't the world their parents constructed for them where the suburban homes were plentiful and for the taking, and even low-level blue collar jobs paid enough to own them. In 2017, homes are wildy unnafordable, and jobs pay less than they did, on average, than they did 40 years ago. It's an untennable situation.
