--- a/_drafts/2017-11-28-1-15-44.md
+++ b/_drafts/2017-11-28-1-15-44.md
@@ -1,3 +1,7 @@
---- layout: post date: November 28, 2017 at 11:43AM title: tags: ---
+--- 
+layout: post 
+date: November 28, 2017 at 11:43AM 
+title: tags: 
+---
 
 [Why Ajit Pai Is Right](https://stratechery.com/2017/why-ajit-pai-is-right/)
