--- a/_drafts/2017-12-13-9-12-30.md
+++ b/_drafts/2017-12-13-9-12-30.md
@@ -5,26 +5,29 @@ title:
 tags:
 ---
 
-This year, I listened to a ton of music, much more than I had since 2013. It was my choice of escape, the place where I could focus my attention when the rest of the world was too much. Thankfully, there was a ton of great music released. And I made a strong effort to search out and discover music I might not have enjoyed previously.
-
-I made a public playlist of my [favorite tracks of 2017](https://itunes.apple.com/us/playlist/2017-favorite-tracks/pl.u-g1y4F5R8jk4) on Apple Music.
+2017 was a good year for music. I ended up listening to more tunes than I had since 2013, if I can trust the data at last.fm. 
 
 Favorite records of 2017:
-- Damn - Kendrick Lamar
-- Humanz - Gorillaz
-- Antisocialites - VVaves
-- I Tell a Fly - Benjamin Clemintine
-- Mangaliso - Bongeziwe Mabandla
-- All American Made - Margo Price
-- Ctrl - SZA
-- Drunk - Thundercat
-- Big Fish Theory - Vince Staples
+- Mangaliso — Bongeziwe Mabandla
+- Humanz — Gorillaz
+- Damn — Kendrick Lamar
+- All American Made — Margo Price
+- Drunk — Thundercat
+- Antisocialites — VVaves
 
-Honorable Mentions
-- La Confusion - Amadou & Miriam
-- Capacity - Big Thief
-- Ash - Ibeyi
-- 4:44 - Jay Z
-- Harmony of Difference - Kamasi Washington
-- Sleep Well Beast - The National
+Honorable Mentions:
+- La Confusion — Amadou & Miriam
+- I Tell a Fly — Benjamin Clemintine
+- Capacity — Big Thief
+- Hug of Thunder — Broken Social Scene
+- Chronology — Chronixx
+- Ash — Ibeyi
+- 4:44 — Jay Z
+- Harmony of Difference — Kamasi Washington
+- Sleep Well Beast — The National
+- Africa Express Presents The Orchestra of Syrian Musicians & Guests — The Orchestra of Syrian Musicians & Guests
+- In Mind — Real Estate
+- Ctrl — SZA
+- Big Fish Theory — Vince Staples
 
+And here's a public playlist of my [favorite tracks of 2017](https://itunes.apple.com/us/playlist/2017-favorite-tracks/pl.u-g1y4F5R8jk4) on Apple Music.
