--- a/_posts/2017/2017-12-14-5-52-30.md
+++ b/_posts/2017/2017-12-14-5-52-30.md
@@ -1,11 +1,11 @@
 ---
 layout:
-post date: December 13, 2017 at 8:52AM
+post date: December 14, 2017 at 5:52PM
 title:
-tags:
+tags: music, 2017
 ---
 
-2017 was a good year for music. I ended up listening to more tunes than I had since 2013, if I can trust the data at last.fm. 
+2017 was a good year for music. I ended up listening to more tunes than I had since 2013, if I can trust the data at last.fm. Tons of great records. A few really great ones. Here are my lists.
 
 Favorite records of 2017:
 - Mangaliso — Bongeziwe Mabandla
@@ -13,7 +13,6 @@ Favorite records of 2017:
 - Damn — Kendrick Lamar
 - All American Made — Margo Price
 - Drunk — Thundercat
-- Antisocialites — VVaves
 
 Honorable Mentions:
 - La Confusion — Amadou & Miriam
@@ -28,6 +27,7 @@ Honorable Mentions:
 - Africa Express Presents The Orchestra of Syrian Musicians & Guests — The Orchestra of Syrian Musicians & Guests
 - In Mind — Real Estate
 - Ctrl — SZA
+- Antisocialites — VVaves
 - Big Fish Theory — Vince Staples
 
 And here's a public playlist of my [favorite tracks of 2017](https://itunes.apple.com/us/playlist/2017-favorite-tracks/pl.u-g1y4F5R8jk4) on Apple Music.
