--- a/_drafts/2017-12-05-7-45-25.md
+++ b/_drafts/2017-12-05-7-45-25.md
@@ -1,2 +1,8 @@
---- layout: post date: December 5, 2017 at 07:45PM title: tags: ---
+--- 
+layout: post 
+date: December 5, 2017 at 07:45PM 
+title: 
+tags: 
+---
+
 [No Wonder Millennials Hate Capitalism](https://www.nytimes.com/2017/12/04/opinion/millennials-hate-capitalism.html)
