--- a/_posts/2018/2018-01-26-11-59-12.md
+++ b/_posts/2018/2018-01-26-11-59-12.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2018-01-26 11:26:08
 title: 
-tags:
+tags: blogging, jekyll
 ---
 
 There is so much chatter about blogs, right now. It's great. What's not so great is how difficult it still is to post one's own website. On a laptop, with Jekyll and Github Pages, there isn't much friction, to be fair. But to blog with my iphone or ipad requires over-difficult hacks. That no one has built an app which can publish to a Jekyll blog via iOS is mind-boggling to me. There must be some kind of deep technical hurdle, right? It can't be because no one wants this app. I'd unquestionably pay $10+ for it. If it was truly well designed, I wouldn't balk at $20 or more. 
