--- a/_posts/2018/2018-01-26-12-24-01.md
+++ b/_posts/2018/2018-01-26-12-24-01.md
@@ -5,4 +5,4 @@ title:
 tags: IFTTT, blogging
 ---
 
-Logged into IFTTT for the first time in awhile to discover my Feedly and Instaper applets have been broken for awhile. IFTTT provides a list of the failures, but don't seem to have any idea why they failed. So there goes my trust in that service.
+Logged into IFTTT for the first time in awhile to discover my Feedly and Instapaper applets have been broken for awhile. IFTTT provides a list of the failures, but don't seem to have any idea why they failed. So there goes my trust in that service.
