--- a/_posts/2018/2018-01-26-12-16-57.md
+++ b/_posts/2018/2018-01-26-12-16-57.md
@@ -5,7 +5,7 @@ title:
 tags: politics, baby boomers, millennials, economy
 ---
 
-Michelle Goldberg not the first nor only person to [make clear why my generation is so quick to balk at capitalism](https://www.nytimes.com/2017/12/04/opinion/millennials-hate-capitalism.html), but I particularly liked this quote:
+Michelle Goldberg is not the first nor the only person to [make clear why my generation is so quick to balk at capitalism](https://www.nytimes.com/2017/12/04/opinion/millennials-hate-capitalism.html), but I particularly liked this quote:
 
 > After the fall of Communism, capitalism came to seem like the modern world’s natural state, like the absence of ideology rather than an ideology itself. The Trump era is radicalizing because it makes the rotten morality behind our inequalities so manifest. It’s not just the occult magic of the market that’s enriching Ivanka Trump’s children while health insurance premiums soar and public school budgets wither. It’s the raw exercise of power by a tiny unaccountable minority that believes in its own superiority. You don’t have to want to abolish capitalism to understand why the prospect is tempting to a generation that’s being robbed.
 
