--- a/_posts/2018/2018-04-12-08-39-52.md
+++ b/_posts/2018/2018-04-12-08-39-52.md
@@ -7,8 +7,9 @@ tags: blogs, Dan Cohen, RSS, Feeeds
 
 [Back to the Blog](https://dancohen.org/2018/03/21/back-to-the-blog/), from Dan Cohen:
 
->There has been a recent movement to “re-decentralize” the web, returning our activities to sites like this one. I am unsurprisingly sympathetic to this as an idealist, and this post is my commitment to renew that ideal. I plan to write more here from now on. However, I’m also a pragmatist, and I feel the re-decentralizers have underestimated what they are up against, which is partially about technology but mostly about human nature.  
-I’ve already mentioned the relative ease and short amount of time it takes to express oneself on centralized services. People are chronically stretched, and building and maintaining a site, and writing at greater length than one or two sentences seems like real work. When I started this site, I didn’t have two kids and two dogs and a rather busy administrative job. Overestimating the time regular people have to futz with technology was the downfall of desktop linux, and a key reason many people use Facebook as their main outlet for expression rather a personal site.
+> There has been a recent movement to “re-decentralize” the web, returning our activities to sites like this one. I am unsurprisingly sympathetic to this as an idealist, and this post is my commitment to renew that ideal. I plan to write more here from now on. However, I’m also a pragmatist, and I feel the re-decentralizers have underestimated what they are up against, which is partially about technology but mostly about human nature.  
+
+> I’ve already mentioned the relative ease and short amount of time it takes to express oneself on centralized services. People are chronically stretched, and building and maintaining a site, and writing at greater length than one or two sentences seems like real work. When I started this site, I didn’t have two kids and two dogs and a rather busy administrative job. Overestimating the time regular people have to futz with technology was the downfall of desktop linux, and a key reason many people use Facebook as their main outlet for expression rather a personal site.
 
 Two problems here which do need solving. One, it's still far too difficult to publish a post on a self-hosted website. And two, there is a lack of innovative tools which could better connect all of these decentralized websites. 
 
