--- a/_posts/MusicReview/2018-04-17-19-23-58.md
+++ b/_posts/MusicReview/2018-04-17-19-23-58.md
@@ -8,4 +8,4 @@ category: musicreview
 img: kilo-kish-reflections-in-real-time.jpg
 ---
 
-This Kilo Kish track *Hello, Lakisha* is so good. It's somewhere in the universe of Architecture in Helsinki, Deerhoof, Belle & Sebastian, etc. The instrumentation is full of horns and four-on-the-floor kick drums, and plucky violin keyboard stabs. The change-ups come quick and often, making this 1:38 long track seem so much longer than it is. There's so much to like in here. Her charm is also cranked up to 11. You'd definitely want to follow this person from one party to the next.
+This Kilo Kish track *Hello, Lakisha* is so good. It's somewhere in the universe of Architecture in Helsinki, Deerhoof, Belle & Sebastian, etc, and not at all what I was expecting from someone associated with The Internet and Vince Staples. The instrumentation is full of horns, four-on-the-floor kick drums, and plucky violin keyboard stabs. The change-ups come quick and often, making this 1:38 long track seem so much longer than it is. Her charm is also cranked up to 11, and I'm convinced I'd follow this person from one party to the next.
