--- a/_posts/photoblog/2015-12-17-07-50-18.md
+++ b/_posts/photoblog/2015-12-17-07-50-18.md
@@ -3,7 +3,7 @@ layout: post
 date: 2015-12-17 07:49:54
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/foggy-NYC.jpg)
