--- a/_posts/photoblog/2017-11-26-13-16-59.md
+++ b/_posts/photoblog/2017-11-26-13-16-59.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-26 13:16:40
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/gym-in-alexandria-la.jpg)
