--- a/_posts/photoblog/2017-11-26-13-17-58.md
+++ b/_posts/photoblog/2017-11-26-13-17-58.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-26 13:17:39
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/bryant-park-sky.jpg)
