--- a/_posts/photoblog/2017-11-28-13-19-02.md
+++ b/_posts/photoblog/2017-11-28-13-19-02.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-28 13:18:47
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/bartender-in-tokyo.jpg)
