--- a/_posts/photoblog/2017-11-28-13-19-59.md
+++ b/_posts/photoblog/2017-11-28-13-19-59.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-28 13:19:39
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/tokyo-taxi.jpg)
