--- a/_posts/photoblog/2017-11-29-13-21-18.md
+++ b/_posts/photoblog/2017-11-29-13-21-18.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-29 13:21:01
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/tokyo-man.jpg)
