--- a/_posts/photoblog/2017-11-30-13-22-32.md
+++ b/_posts/photoblog/2017-11-30-13-22-32.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-30 13:22:19
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/hermosa-beach-parking.jpg)
