--- a/_posts/photoblog/2017-12-01-16-12-06.md
+++ b/_posts/photoblog/2017-12-01-16-12-06.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-12-01 16:11:51
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/pink-sedona-jeep.jpg)
