--- a/_posts/photoblog/2017-12-02-16-13-22.md
+++ b/_posts/photoblog/2017-12-02-16-13-22.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-12-02 16:13:04
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/tribeca-morning.jpg)
