--- a/_posts/photoblog/2017-12-03-16-14-26.md
+++ b/_posts/photoblog/2017-12-03-16-14-26.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-12-03 16:14:12
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/koons-in-rockafeller.jpg)
