--- a/_posts/photoblog/2017-12-04-16-15-24.md
+++ b/_posts/photoblog/2017-12-04-16-15-24.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-12-04 16:15:07
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/tokyo-park-map.jpg)
