--- a/_posts/photoblog/2017-12-05-16-16-29.md
+++ b/_posts/photoblog/2017-12-05-16-16-29.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-12-05 16:16:12
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/go-tigers.jpg)
