--- a/_posts/photoblog/2017-11-19-12-55-15.md
+++ b/_posts/photoblog/2017-11-19-12-55-15.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-19 12:54:57
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![M and G](/assets/photoblog/m-and-g.jpeg)
