--- a/_posts/photoblog/2017-11-21-13-11-45.md
+++ b/_posts/photoblog/2017-11-21-13-11-45.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-21 13:11:13
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/malibu-beach-house.jpg)
