--- a/_posts/photoblog/2017-11-20-12-59-54.md
+++ b/_posts/photoblog/2017-11-20-12-59-54.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-20 12:59:42
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/trees-in-croton-on-hudson.jpg)
