--- a/_posts/photoblog/2017-11-22-13-13-23.md
+++ b/_posts/photoblog/2017-11-22-13-13-23.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-22 13:13:05
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/crowd-in-kyoto.jpg)
