--- a/_posts/photoblog/2017-11-23-13-14-33.md
+++ b/_posts/photoblog/2017-11-23-13-14-33.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-23 13:14:17
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/friends-during-the-eclipse.jpg)
