--- a/_posts/photoblog/2017-11-24-13-15-58.md
+++ b/_posts/photoblog/2017-11-24-13-15-58.md
@@ -3,7 +3,7 @@ layout: post
 date: 2017-11-24 13:15:36
 title: 
 tags:
-blog: photos
+category: photos
 ---
 
 ![title](/assets/photoblog/crab-in-a-cage.jpg)
